Implemented ProductService for desktop, added JWT session management, and refactored Dashboard with a modern Web-UI style